# operations-debs-contenttranslation-apertium-dan-nor

./: Makefile.in  apertium-dan-nor_1.0.0~r48173.orig.tar.gz.delta  apertium-dan-nor_1.0.0~r48173.orig.tar.gz.id  apertium-dan-nor_1.2.2~r65301.orig.tar.bz2.delta  apertium-dan-nor_1.2.2~r65301.orig.tar.bz2.id  apertium-dan-nor_1.3.0~r67099.orig.tar.bz2.delta  apertium-dan-nor_1.3.0~r67099.orig.tar.bz2.id  apertium-dan-nor_1.4.0.orig.tar.gz.delta  apertium-dan-nor_1.4.0.orig.tar.gz.id  apertium-dan-nor_1.4.1.orig.tar.bz2.delta  apertium-dan-nor_1.4.1.orig.tar.bz2.id  configure
apertium-dan-0.6.1/: Makefile.am  apertium-dan.dan.rlx  apertium-dan.pc.in  configure.ac  modes.xml
debian/: changelog  control  copyright  rules
